--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/KauanR/SQUAD-URI-2#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "express-validator": "^6.1.1",
     "mysql": "^2.17.1"
   },
   "devDependencies": {
