--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-request-id": "^1.4.1",
     "express-validator": "^6.1.1",
+    "lodash": "^4.17.15",
     "mysql": "^2.17.1"
   },
   "devDependencies": {
