--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express-request-id": "^1.4.1",
     "express-validator": "^6.2.0",
     "lodash": "^4.17.15",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "swagger-ui-express": "^4.0.7"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
