--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "test": "jest --verbose --env=jsdom"
+    "migrate": "npx sequelize-cli db:migrate",
+    "migrate:reset": "npx sequelize-cli db:migrate:undo:all && npm run migrate",
+    "test": "cross-env NODE_ENV=test jest --testTimeout=10000",
+    "pretest": "cross-env NODE_ENV=test npm run migrate:reset"
   },
   "repository": {
     "type": "git",
@@ -26,6 +29,7 @@
     "express-validator": "^6.2.0",
     "lodash": "^4.17.15",
     "mysql": "^2.17.1",
+    "mysql2": "^1.7.0",
     "swagger-ui-express": "^4.0.7"
   },
   "devDependencies": {
@@ -33,6 +37,8 @@
     "eslint": "^6.3.0",
     "jest": "^24.9.0",
     "nodemon": "^1.19.1",
+    "sequelize": "^5.18.1",
+    "sequelize-cli": "^5.5.1",
     "supertest": "^4.0.2"
   },
   "jest": {
